# onelogin-aws-cli

./: .gitignore  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
src/onelogin_aws_cli/: __init__.py  argparse.py  cli.py  configuration.py  credentials.py  userquery.py
tests/: test_configurationFile.py  test_oneLoginAWSArgumentParser.py  test_userCredentials.py  test_userquery.py
