[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onelogin-aws-cli"
version = "0.2.0"
description = "OneLogin AWS role assumption via CLI"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Cameron Marlow", email = "cameron@physera.com" }]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: System :: Systems Administration :: Authentication/Directory"
]
dependencies = [
  "boto3",
  "onelogin>=2.0,<3.0",
  "keyring",
  "requests",
]

[project.urls]
Homepage = "https://github.com/physera/onelogin-aws-cli"
Issues = "https://github.com/physera/onelogin-aws-cli/issues"

[project.scripts]
onelogin-aws-login = "onelogin_aws_cli.cli:login"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "setuptools",
  "types-requests>=2.31.0.6",
]
